Wed May 06 03:54:05 GMT 2015  Olly Betts <olly@survex.com>

	* matcher/nearpostlist.cc: Make code for scanning window for duplicate
	  positions a little clearer.

Wed May 06 03:52:57 GMT 2015  Olly Betts <olly@survex.com>

	* matcher/nearpostlist.cc: Fix "/*" within comment.

Wed May 06 03:50:45 GMT 2015  Olly Betts <olly@survex.com>

	* matcher/nearpostlist.cc,matcher/nearpostlist.h: Reimplement OP_NEAR
	  check.  The new implementation consistently requires the terms to
	  occur at different positions, and fixes some false negatives.
	* tests/api_query.cc: Add regression tests as loosenear1.

Tue May 05 23:27:19 GMT 2015  Olly Betts <olly@survex.com>

	* matcher/phrasepostlist.cc,matcher/phrasepostlist.h: Reimplement
	  OP_PHRASE check for loose phrases - the existing implementation was
	  buggy, giving both false positives and false negatives in rare
	  cases.  Fixes #653, reported by Jean-Francois Dockes.
	* tests/api_query.cc: Add regression test loosephrase1.

Tue May 05 23:24:21 GMT 2015  Olly Betts <olly@survex.com>

	* api/queryinternal.cc,matcher/: Split NearPostList out into separate
	  source file and header.

Tue May 05 15:25:22 GMT 2015  Olly Betts <olly@survex.com>

	* bin/xapian-progsrv.cc: Fix comment typo.

Tue May 05 15:23:48 GMT 2015  Olly Betts <olly@survex.com>

	* backends/flint/flint_cursor.cc,backends/flint/flint_table.cc,
	  tests/api_backend.cc: Fix #675 for flint as well.

Tue May 05 15:02:51 GMT 2015  Olly Betts <olly@survex.com>

	* backends/brass/brass_cursor.cc,backends/brass/_table.cc,
	  backends/chert/chert_cursor.cc,backends/chert/chert_table.cc:
	  Potentially increment the cursor version on cancel() or when the
	  database is reopened, and flag the current cursor version as used
	  when a cursor is rebuilt.  Fixes #675, reported by Germán M. Bravo.
	* tests/api_backend.cc: Add regression test cursorbug1 based on
	  reproducer supplied by Germán.

Tue May 05 14:26:01 GMT 2015  Olly Betts <olly@survex.com>
